ansible/quadlet-files/quadlet-nginx-envoy.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: quadlet-nginx-envoy
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: envoy
    image: docker.io/envoyproxy/envoy:v1.25.0
    volumeMounts:
    - name: config-volume
      mountPath: /etc/envoy
    env:
    - name: ENVOY_UID
      value: "0"
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
  - name: config-volume
    configMap:
      name: envoy-proxy-config
